--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 		<title>Collection of HTML5 Snippets </title>
 	</head>
 	<body>
-		<h2>img srcset demo</h2>
+        <h1>Collection of HTML5 Snippets</h1>
+		
+        <div>
+          <h2>img srcset demo</h2>
+          <h4>The big map is displayed if you have a HD monitor</h4>        
+          <img src="images/smallmap.jpg" srcset="images/bigmap.jpg 2x" style="width: 200px; height: 200px;"/>
+        </div>
+        
+        <hr/>
 	</body>
 </html>
