Added notes to the img srcset

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		
         <div>
           <h2>img srcset demo</h2>
-          <h4>The big map is displayed if you have a HD monitor</h4>        
+          <h4>Big map is displayed on a HD monitor.</h4>
+          Currently only supported by <a href="http://nightly.webkit.org/">nightly build of webkit</a>
           <img src="images/smallmap.jpg" srcset="images/bigmap.jpg 2x" style="width: 200px; height: 200px;"/>
         </div>
         
