--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <html>
 	<head>
 		<title>Collection of HTML5 Snippets </title>
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
         <h1>Collection of HTML5 Snippets</h1>
 		
-        <div>
+        <section>
           <h2>img srcset demo</h2>
           <h4>Big map is displayed on a HD monitor.</h4>
-          Currently only supported by <a href="http://nightly.webkit.org/">nightly build of webkit</a>
-          <img src="images/smallmap.jpg" srcset="images/bigmap.jpg 2x" style="width: 200px; height: 200px;"/>
-        </div>
+          <div class="notes">Currently only supported by <a href="http://nightly.webkit.org/">nightly build of webkit</a></div>
+	  <div class="contents">
+          	<img src="images/smallmap.jpg" srcset="images/bigmap.jpg 2x" style="width: 200px; height: 200px;"/>
+          </div>
+	</section>
         
         <hr/>
 	</body>
