--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <h1>Collection of HTML5 Snippets</h1>
 		
         <section>
-          <h2>img srcset demo</h2>
-          <h4>Big map is displayed on a HD monitor.</h4>
+          <div class="title">img srcset demo</div>
+          <div class="subtitle">Big map is displayed on a HD monitor.</div>
           <div class="notes">Currently only supported by <a href="http://nightly.webkit.org/">nightly build of webkit</a></div>
 	  <div class="contents">
           	<img src="images/smallmap.jpg" srcset="images/bigmap.jpg 2x" style="width: 200px; height: 200px;"/>
