--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-        <h1>Collection of HTML5 Snippets</h1>
+        <div class="heading">Collection of HTML5 Snippets</div>
 		
         <section>
-          <div class="title">img srcset demo</div>
+          <div class="title">SRCSET demo</div>
           <div class="subtitle">Big map is displayed on a HD monitor.</div>
           <div class="notes">Currently only supported by <a href="http://nightly.webkit.org/">nightly build of webkit</a></div>
-	  <div class="contents">
-          	<img src="images/smallmap.jpg" srcset="images/bigmap.jpg 2x" style="width: 200px; height: 200px;"/>
+	      <div class="contents">
+          	<img src="images/smallimg.jpg" srcset="images/bigimage.jpg 2x" style="width: 200px; height: 200px;"/>
           </div>
-	</section>
+	    </section>
         
-        <hr/>
 	</body>
 </html>
