Added some styling

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-				<div class="heading">Collection of HTML5 Snippets</div>
+				<div class="heading">
+					<div class="text">Collection of HTML5 Snippets</div>
+				</div>
 
+			<div class="main-contents">
 				<section>
 					<div class="title">SRCSET demo</div>
 					<div class="subtitle">Different image is displayed on a HD monitor.</div>
@@ -111,6 +114,6 @@
 								</div>
 						</div>
 				</section>
-
+			</div>
 	</body>
 </html>
