added kaleidoscope project

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       <ul>
         <li> <a href="./snippets/index.html">HTML5 Snippets</a> </li>
         <li> <a href="./floatingShapes/index.html"> Floating Circles using HTML Canvas </a></li>
-      </ul>
+        <li><a href="http://kaleidoscope.nodejitsu.com/"> Kaleidoscope using HTML Canvas and CSS3 Animations </a> </li>
+    </ul>
     </div>
     <div class="footer"></div>
   </body>
