changed title for main page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Collection of HTML5 Snippets </title>
+    <title>Portfolio </title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
