--- a/index.html
+++ b/index.html
@@ -14,11 +14,6 @@
       </div>
     </div>
     <div class="contents horizontal-center">
-      <!--<ul>
-        <li> <a href="./snippets/index.html">HTML5 Snippets</a> </li>
-        <li> <a href="./floatingShapes/index.html"> Floating Circles using HTML Canvas </a></li>
-        <li><a href="http://kaleidoscope.nodejitsu.com/"> Kaleidoscope using HTML Canvas and CSS3 Animations </a> </li>
-    </ul>-->
 
       <div class="social flexbox-row">
         <a href="https://github.com/archana-s" class="ft-newscycle ft-16 ft-grey"><div class="git"> <span>Git</span> </div></a>
@@ -57,6 +52,25 @@
     </a>
 
     </div>
+
+    <div class="twitter-feed">
+      <a class="twitter-timeline" href="https://twitter.com/archana_june" data-widget-id="447143548421296128">Tweets by @archana_june</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    </div>
+
+    <div class="test-menu in">
+      <ul>
+        <li> Test1 </li>
+        <li> Test1 </li>
+        <li> Test1 </li>
+        <li> Test1 </li>
+      </ul>
+    </div>
+
+    <div class="testing">
+      <a href="collapsed">Open Test Menu</a>
+    </div>
+
     <div class="footer horizontal-center">
       <div class="tag">
         <a href="mailto:archana.june@gmail.com" class="ft-grey ft-16 ft-newscycle">Contact me</a>
@@ -83,6 +97,14 @@
             $(this).find('.text').toggleClass('show');
             $(this).find('.text').toggleClass('hide');
         });
+
+        $('.testing').click(function(evt){
+           evt.preventDefault();
+           $(this).toggleClass('collapsed');
+           $('.test-menu').toggleClass('in');
+           $('.test-menu').toggleClass('collapsed');
+        });
+
       });
     </script>
 
