Added the new web app template

--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
           <div class="text ft-white ft-16 ft-bold ft-newscycle hide absolute-center">
             <span>HTML Snippets</span>
           </div>
-        </div>
+      </div>
+    </a>
+
+    <a href="https://github.com/archana-s/SimpleWebAppBoilerPlate">
+      <div class="container">
+        <div class="git-project absolute-center ft-white ft-16 ft-bold ft-newscycle">Backbone/Node based Boilerplate with Marionette/Grunt/Bower/SASS</div>
       </div>
     </a>
 
