Added jsbins created over the last 2 days

--- a/index.html
+++ b/index.html
@@ -56,18 +56,33 @@
       </div>
     </a>
 
-    </div>
+  </div>
 
-    <div class="twitter-feed">
-      <a class="twitter-timeline" href="https://twitter.com/archana_june" data-widget-id="447143548421296128">Tweets by @archana_june</a>
-      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-    </div>
+  <div class="jsbins">
+    <span class="title ft-26 ft-bold ft-newscycle ft-black"> JSBins </span>
+    <ul>
+      <li>
+        <a href="http://jsbin.com/saqox/21/edit" class="content ft-16 ft-newscycle ft-black">
+          <span class="ft-bold">Motion Perception Experiment in CSS:</span> <span class="ft-13 ft-grey">Moving blocks (one dark and one light) against a striped surface looks like staggered motion.</span>
+        </a>
+      </li>
 
-    <div class="footer horizontal-center">
+      <li>
+        <a href="http://jsbin.com/lamoz/11/" class="content ft-16 ft-newscycle ft-black">
+          <span class="ft-bold">Frosted Glass Effect using HTML5 Blur:</span> <span class="ft-13 ft-grey">Using blur with two side frosts from divs</span>
+        </a>
+      </li>
+    </ul>
+
+  </div>
+
+
+
+    <!-- <div class="footer horizontal-center">
       <div class="tag">
         <a href="mailto:archana.june@gmail.com" class="ft-grey ft-16 ft-newscycle">Contact me</a>
       </div>
-    </div>
+    </div> -->
     <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
 
     <script type="text/javascript">
