removed edit mode for jsbin

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <span class="title ft-26 ft-bold ft-newscycle ft-black"> JSBins </span>
     <ul>
       <li>
-        <a href="http://jsbin.com/saqox/21/edit" class="content ft-16 ft-newscycle ft-black">
+        <a href="http://jsbin.com/saqox/21" class="content ft-16 ft-newscycle ft-black">
           <span class="ft-bold">Motion Perception Experiment in CSS:</span> <span class="ft-13 ft-grey">Moving blocks (one dark and one light) against a striped surface looks like staggered motion.</span>
         </a>
       </li>
