Added another bin

--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
           <span class="ft-bold">Frosted Glass Effect using HTML5 Blur:</span> <span class="ft-13 ft-grey">Using blur with two side frosts from divs</span>
         </a>
       </li>
+
+      <li>
+        <a href="http://jsbin.com/zakox/8/" class="content ft-16 ft-newscycle ft-black">
+          <span class="ft-bold">Auto Scroll Page:</span> <span class="ft-13 ft-grey">Automatically scroll page up and down. Useful for videography or even reading.</span>
+        </a>
+      </li>
+
+
+
     </ul>
 
   </div>
