--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <span>Archana Sankaranarayanan</span>
       </div>
       <div class="work ft-newscycle ft-20 ft-grey">
-        Front End Engineer
+        Front End Engineer @Coursera
       </div>
     </div>
     <div class="contents horizontal-center">
